@@ -268,6 +268,15 @@
 				</listitem>
 			</varlistentry>
 			<varlistentry>
+				<term><option>clientid</option> <replaceable>id</replaceable></term>
+				<listitem>
+					<para>Set the client id for this bridge connection. If not
+					defined, this defaults to 'name.hostname', where name is
+					the connection name and hostname is the hostname of this
+					computer.</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
 				<term><option>connection</option> <replaceable>name</replaceable></term>
 				<listitem>
 					<para>This variable marks the start of a new bridge
