@@ -157,6 +157,11 @@
 #address <host>[:<port>]
 #topic <topic> [out | in | both]
 
+# Set the client id for this bridge connection. If not defined, this defaults
+# to 'name.hostname' where name is the connection name and hostname is the
+# hostname of this computer.
+#clientid
+
 # Set the clean session variable for this bridge.
 # When set to true, when the bridge disconnects for any reason, all messages
 # and subscriptions will be cleaned up on the remote broker. Note that with
@@ -194,7 +199,6 @@
 #threshold
 #try_private
 #mount_point
-#clientid
 #acl_file
 #allow_anonymous
 #ffdc_output
